--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,16 @@
       <div class="BackgroundCircles">
         <img src="assets/title-circles.svg" />
       </div>
-      <img class="logo" src="assets/logo.svg" />
+      <div class="LogoSection column">
+        <img class="logo" src="assets/logo.svg" />
+        <div class="StrategicPartnersSection column">
+          <div class="StrategicPartnersList row">
+            <embed class="logo" src="assets/binance.svg" />
+            <embed class="logo" src="assets/orbs.svg" />
+          </div>
+          <div class="StrategicPartnersLabel medium">Strategic Partners</div>
+        </div>
+      </div>
       <div>
         <h1>DeFi<span class="small">.org</span> Accelerator</h1>
         <p>Helping founders launch the next wave of DeFi innovation</p>
