--- a/public/index.html
+++ b/public/index.html
@@ -17,19 +17,21 @@
     <title>DeFi.org Accelerator</title>
   </head>
   <body>
+    <div class="PartnersSection row" >
+      <div class="LogoSection column" >
+        <div class="StrategicPartnersList row">
+          <embed class="logo" src="assets/binance.svg" />
+          <embed class="logo" src="assets/orbs.png" />
+        </div>
+        <div class="StrategicPartnersLabel large">FOUNDING PARTNERS</div>
+      </div>
+    </div>
     <div class="TitleSection column">
       <div class="BackgroundCircles">
         <img src="assets/title-circles.svg" />
       </div>
       <div class="LogoSection column">
-        <img class="logo" src="assets/logo.svg" />
         <div class="StrategicPartnersSection column">
-          <div class="StrategicPartnersList row">
-            <embed class="logo" src="assets/binance.svg" />
-            <embed class="logo" src="assets/orbs.svg" />
-          </div>
-          <div class="StrategicPartnersLabel medium">Strategic Partners</div>
-        </div>
       </div>
       <div>
         <h1>DeFi<span class="small">.org</span> Accelerator</h1>
@@ -105,7 +107,7 @@
         </div>
       </div>
       <div class="Half">
-        <p class="WallText">We've assembled a group of world-class mentors, each an industry expert, in these key fields: 
+        <p class="WallText">We've assembled a group of world-class mentors, each an industry expert, in these key fields:
           <b>Product/UX</b> to help pull your concept into a shippable product.
           <b>Crypto economics</b> to discuss theory and help finetune your model.
           <b>Solidity</b> to help review and improve your contract code.
