--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,7 @@
       <div class="BackgroundCircles">
         <img src="assets/title-circles.svg" />
       </div>
-      <div class="LogoSection column">
-        <div class="StrategicPartnersSection column">
-      </div>
+      <img class="logo" src="assets/logo.svg" />
       <div>
         <h1>DeFi<span class="small">.org</span> Accelerator</h1>
         <p>Helping founders launch the next wave of DeFi innovation</p>
