--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="DeFi.org Accelerator - Helping founders launch the next wave of DeFi innovation"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css?id=123" />
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
@@ -20,8 +20,8 @@
     <div class="PartnersSection row" >
       <div class="LogoSection column" >
         <div class="StrategicPartnersList row">
-          <embed class="logo" src="assets/binance.svg" />
-          <embed class="logo" src="assets/orbs.png" />
+          <a class="binanceLogo" href="https://www.binance.com"><embed class="logo" src="assets/binance.svg" /></a>
+          <a class="orbsLogo" href="https://www.orbs.com"><img class="orbsLogo" src="assets/orbs.png"/></a>
         </div>
         <div class="StrategicPartnersLabel large">FOUNDING PARTNERS</div>
       </div>
