--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,23 @@
     <link rel="manifest" href="site.webmanifest" />
     <meta name="theme-color" content="#ffffff" />
     <title>DeFi.org Accelerator</title>
+    <script language="JavaScript">
+      function updateGeometryVisibility(){
+        document.getElementById('geometry_container').hidden = window.innerWidth < 1150;
+      }
+    </script>
   </head>
-  <body>
+  <body onresize="updateGeometryVisibility()" onload="updateGeometryVisibility()">
+    <div class="PartnersSection row" style="padding-top: 0px">
+
+      <div class="LogoSection column" style="padding-top: 50px">
+        <div class="StrategicPartnersList row" >
+          <a class="binanceLogo" href="https://www.binance.com"><embed class="logo" src="assets/binance.svg" /></a>
+          <a class="orbsLogo" href="https://www.orbs.com"><img class="orbsLogo" src="assets/orbs.png"/></a>
+        </div>
+        <div class="StrategicPartnersLabel large">FOUNDING PARTNERS</div>
+      </div>
+    </div>
     <div class="TitleSection column">
       <div class="BackgroundCircles">
         <img src="assets/title-circles.svg" />
@@ -147,6 +162,14 @@
       <a href="https://github.com/defi-org-code">GitHub</a>
       <a href="https://t.me/defiorg">Telegram</a>
       <a href="mailto:hello@defi.org">hello@defi.org</a>
+    </div>
+    <div id="geometry_container" hidden="true">
+      <div style="width: 15%; max-width: 180px; position: absolute; left: 15%; top: -70px;">
+        <img src="assets/geom1.png" width="100%">
+      </div>
+      <div style="width: 15%; max-width: 360px; position: absolute; left: 70%; top: 20px;">
+        <img src="assets/geom2.png" width="100%">
+      </div>
     </div>
   </body>
 </html>
