comment out circles - issue with centring

--- a/public/index.html
+++ b/public/index.html
@@ -33,9 +33,9 @@
       </div>
     </div>
     <div class="TitleSection column">
-      <div class="BackgroundCircles">
+      <!--div class="BackgroundCircles"> 
         <img src="assets/title-circles.svg" />
-      </div>
+      </div-->
       <img class="logo" src="assets/logo.svg" />
       <div>
         <h1>DeFi<span class="small">.org</span> Accelerator</h1>
