--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       </div>
     </div>
     <div class="TitleSection column">
-      <!--div class="BackgroundCircles"> 
+      <!--div class="BackgroundCircles">
         <img src="assets/title-circles.svg" />
       </div-->
       <img class="logo" src="assets/logo.svg" />
@@ -158,6 +158,7 @@
     </div>
     <div class="Footer row">
       <span>© 2020 defi.org</span>
+      <a href="defi.org.terms.3.1.pdf">Terms and Conditions</a>
       <a href="https://www.privacypolicies.com/generic/">Privacy</a>
       <a href="https://github.com/defi-org-code">GitHub</a>
       <a href="https://t.me/defiorg">Telegram</a>
