--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   </head>
   <body onresize="updateGeometryVisibility()" onload="updateGeometryVisibility()">
     <div class="PartnersSection row" style="padding-top: 0px">
-
+      <a href="https://www.announcements.defi.org/" style="position: absolute; left: 85%; top: 30px; ">Announcements</a>
       <div class="LogoSection column" style="padding-top: 50px">
         <div class="StrategicPartnersList row" >
           <a class="binanceLogo" href="https://www.binance.com"><embed class="logo" src="assets/binance.svg" /></a>
@@ -158,6 +158,7 @@
     </div>
     <div class="Footer row">
       <span>© 2020 defi.org</span>
+      <a href="https://www.announcements.defi.org/">Announcements</a>
       <a href="defi.org.terms.3.1.pdf">Terms and Conditions</a>
       <a href="https://www.privacypolicies.com/generic/">Privacy</a>
       <a href="https://github.com/defi-org-code">GitHub</a>
