--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,9 @@
         <div class="StrategicPartnersList row" >
           <a class="binanceLogo" href="https://www.binance.com"><embed class="logo" src="assets/binance.svg" /></a>
           <a class="orbsLogo" href="https://www.orbs.com"><img class="orbsLogo" src="assets/orbs.png"/></a>
+          <a class="moonstakeLogo" href="https://moonstake.io/"><img class="moonstakeLogo" src="assets/moonstake.svg"/></a>
         </div>
-        <div class="StrategicPartnersLabel large">FOUNDING PARTNERS</div>
+        <div class="StrategicPartnersLabel large">MANAGING PARTNERS</div>
       </div>
     </div>
     <div class="TitleSection column">
