added twitter-ui section

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+    <script src="./js/index.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.7.12/lottie.min.js"></script>
     <link rel="manifest" href="site.webmanifest" />
     <meta name="theme-color" content="#ffffff" />
     <title>DeFi.org Accelerator</title>
@@ -126,7 +128,7 @@
         <br/>
       </div>
     </div>
-    <div class="LightSection column spacedMore">
+    <div class="LightSection column">
       <div class="SectionTitle centered">
         <h2>SHOWCASE</h2>
       </div>
@@ -142,6 +144,14 @@
           <a href="https://medium.com/@defiorg/yield-fighter-where-tokens-compete-to-become-the-next-yield-farm-2b047ddd901d"><img src="assets/icon-medium-light.svg" width=32 height=32 /></a>
         </div>
       </div>
+    </div>
+    <div class="LightSection twitter column spacedMore">
+        <p class="twitter-title">
+          <img src= './assets/twitter-color.svg' />
+          <strong>Realtime</strong> <span>DeFi</span> <strong>Tweets</strong> on what really going on in crypto
+        </p>
+       <div   class="twitter-animation lottie" data-animation-path='./assets/loadingSmall.json' data-anim-loop="true" data-name="twitter-ui"></div>
+      <a class="twitter-link ui primary button" href="https://twitter.defi.org/" target="_blank">View Dashboard</a>
     </div>
     <div class="DarkSection column">
       <a name="apply" />
