changed twitter section title font size

--- a/public/index.html
+++ b/public/index.html
@@ -128,27 +128,11 @@
         <br/>
       </div>
     </div>
-    <div class="LightSection column">
-      <div class="SectionTitle centered">
-        <h2>SHOWCASE</h2>
-      </div>
-      <img src="assets/dotted-line.svg" style="margin-top: 8px;" />
-      <div class="ProjectDetails">
-        <a name="yieldfighter" />
-        <img src="assets/yieldfighter-logo.svg" />
-        <p>Demo project to showcase our mentors' abilities and for you to build on, created in a one week hackathon. Gameified yield farming in which tokens
-          compete to become next week's farming target.</p>
-        <div>
-          <a href="https://github.com/defi-org-code/yield-fighter-demo"><img src="assets/icon-github-light.svg" width=32 height=32 /></a>
-          <a href="https://fighter.finance"><img src="assets/icon-website-light.svg" width=32 height=32 /></a>
-          <a href="https://medium.com/@defiorg/yield-fighter-where-tokens-compete-to-become-the-next-yield-farm-2b047ddd901d"><img src="assets/icon-medium-light.svg" width=32 height=32 /></a>
-        </div>
-      </div>
-    </div>
+    
     <div class="LightSection twitter column spacedMore">
         <p class="twitter-title">
           <img src= './assets/twitter-color.svg' />
-          <strong>Realtime</strong> <span>DeFi</span> <strong>Tweets</strong> on what really going on in crypto
+          <strong>Realtime</strong> <span>DeFi</span> <strong>Tweets</strong> on what’s really going on in crypto
         </p>
        <div   class="twitter-animation lottie" data-animation-path='./assets/loadingSmall.json' data-anim-loop="true" data-name="twitter-ui"></div>
       <a class="twitter-link ui primary button" href="https://twitter.defi.org/" target="_blank">View Dashboard</a>
